--- a/Consumer/pom.xml
+++ b/Consumer/pom.xml
@@ -68,5 +68,11 @@
 		    <version>1.18.8</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>5.1.4.RELEASE</version>
+		</dependency>
     </dependencies>
 </project>
