--- a/Provider/pom.xml
+++ b/Provider/pom.xml
@@ -87,5 +87,11 @@
 		    <version>1.18.8</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>io.github.openfeign</groupId>
+		    <artifactId>feign-okhttp</artifactId>
+		    <version>10.3.0</version>
+		</dependency>
     </dependencies>
 </project>
