--- a/Provider2/pom.xml
+++ b/Provider2/pom.xml
@@ -86,5 +86,11 @@
 		    <version>1.18.8</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>io.github.openfeign</groupId>
+		    <artifactId>feign-okhttp</artifactId>
+		    <version>10.3.0</version>
+		</dependency>
     </dependencies>
 </project>
