--- a/Consumer/pom.xml
+++ b/Consumer/pom.xml
@@ -39,6 +39,11 @@
 		  <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>test</groupId>
+		  <artifactId>scin2</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
