--- a/txlcn-tm/src/main/resources/application.properties
+++ b/txlcn-tm/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=root
 spring.datasource.password=Ee84336462!
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+tx-lcn.manager.host=0.0.0.0
